--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,9 +9,54 @@
 html {
 	font-size: 62.5%;
 	scroll-behavior: smooth;
+	background-color: black;
 }
 
 body {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 1.6rem;
+}
+
+nav {
+	ul {
+		padding-top: 50px;
+		position: absolute;
+		height: 100vh;
+		width: 300px;
+		left: -300px;
+		list-style: none;
+		background-color: rgb(255, 255, 255);
+		transition: transform 0.3s;
+	}
+
+	a {
+		display: block;
+		padding: 10px 30px;
+		color: #333;
+		text-decoration: none;
+	}
+	a:hover {
+		font-weight: bold;
+	}
+}
+
+.burger {
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 10px 20px;
+	font-size: 36px;
+	background: none;
+	border: none;
+	cursor: pointer;
+	color: #fff;
+	transition: transform 0.3s;
+}
+
+.active {
+	transform: translateX(300px);
+}
+
+.hide {
+	display: none;
 }
