--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,7 @@
+@import './colors';
+@import './components';
+@import './mixins';
+
 *,
 *::before,
 *::after {
@@ -9,7 +13,8 @@
 html {
 	font-size: 62.5%;
 	scroll-behavior: smooth;
-	background-color: black;
+	background-color: $main-color;
+	height: 200vh;
 }
 
 body {
@@ -17,46 +22,138 @@ body {
 	font-size: 1.6rem;
 }
 
-nav {
-	ul {
-		padding-top: 50px;
-		position: absolute;
-		height: 100vh;
-		width: 300px;
-		left: -300px;
-		list-style: none;
-		background-color: rgb(255, 255, 255);
-		transition: transform 0.3s;
-	}
-
-	a {
-		display: block;
-		padding: 10px 30px;
-		color: #333;
-		text-decoration: none;
-	}
-	a:hover {
-		font-weight: bold;
-	}
-}
-
-.burger {
-	position: absolute;
-	top: 0;
-	left: 0;
-	padding: 10px 20px;
-	font-size: 36px;
+// NAV
+.burger-btn {
+	position: fixed;
+	top: 20px;
+	right: 20px;
+	padding: 1em;
 	background: none;
-	border: none;
+	border: 1px solid transparent;
 	cursor: pointer;
-	color: #fff;
-	transition: transform 0.3s;
+	z-index: 1000;
+
+	&:focus {
+		outline: none;
+		border: 1px solid rgba(255, 255, 255, 0.5);
+		border-radius: 8px;
+	}
+
+	&:hover {
+		.burger-btn__bars::after,
+		.burger-btn__bars::before {
+			width: 100%;
+		}
+	}
+
+	&__box {
+		position: relative;
+		width: 40px;
+		height: 30px;
+	}
+
+	&__bars,
+	&__bars::after,
+	&__bars::before {
+		@include burgerBtn;
+	}
+
+	&__bars {
+		width: 100%;
+		&::after {
+			top: 13px;
+			width: 60%;
+		}
+
+		&::before {
+			top: 27px;
+			width: 30%;
+			transition-delay: 0.1s;
+		}
+	}
 }
 
-.active {
-	transform: translateX(300px);
+.nav {
+	position: fixed;
+	top: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100%;
+	transform: translateX(100%);
+	background-image: $light-green-gradient;
+	z-index: 100;
+	transition: 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
+
+	&--active {
+		transform: translateX(0);
+	}
+
+	&__item {
+		position: relative;
+		display: block;
+		margin: 0.5em 0;
+		padding: 0.5em 2em;
+		font-size: 2.8rem;
+		color: $pure-white;
+		text-decoration: none;
+
+		&::before {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 3px;
+			height: 100%;
+			transform: scaleY(0);
+			background-color: $pure-white;
+			content: '';
+			transition: transform 0.3s;
+		}
+
+		&:hover::before {
+			transform: scaleY(1);
+		}
+	}
 }
 
-.hide {
-	display: none;
+@keyframes navItemsAnimation {
+	from {
+		transform: translateX(200%);
+	}
+
+	to {
+		transform: translateX(0);
+	}
+}
+
+.nav-items-animation {
+	animation: navItemsAnimation 1s both;
+}
+
+.black-bars-color,
+.black-bars-color::after,
+.black-bars-color::before {
+	background-color: $dark;
+}
+div.logo {
+	position: fixed;
+	top: 50px;
+	left: 50px;
+	z-index: 999;
+}
+
+////// MEDIA /////
+
+@media (min-width: 992px) {
+	.burger-btn {
+		top: 50px;
+		right: 50px;
+	}
+
+	.nav {
+		&__item {
+			font-size: 4.8rem;
+		}
+	}
 }
