--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -82,7 +82,7 @@ body {
 	height: 100vh;
 	width: 100%;
 	transform: translateX(100%);
-	background-image: $light-green-gradient;
+	background-image: $light-blue-gradient;
 	z-index: 100;
 	transition: 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 
