--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,7 @@
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -55,7 +54,6 @@ body {
   height: 3px;
   content: "";
   background-color: #fff;
-  -webkit-transition: width 0.3s;
   transition: width 0.3s;
 }
 .burger-btn__bars {
@@ -68,38 +66,31 @@ body {
 .burger-btn__bars::before {
   top: 27px;
   width: 30%;
-  -webkit-transition-delay: 0.1s;
-          transition-delay: 0.1s;
+  transition-delay: 0.1s;
 }
 
 .nav {
   position: fixed;
   top: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
   width: 100%;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
+  transform: translateX(100%);
   background-image: linear-gradient(45deg, rgba(187, 208, 255, 0.75), rgba(190, 187, 255, 0.75));
   z-index: 100;
-  -webkit-transition: 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
   transition: 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 .nav--active {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
+  transform: translateX(0);
 }
 .nav__item {
   position: relative;
   display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0.5em 0;
   padding: 0.5em 2em;
   font-size: 2.8rem;
@@ -110,41 +101,51 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 3px;
+  width: 100%;
   height: 100%;
-  -webkit-transform: scaleY(0);
-          transform: scaleY(0);
-  background-color: #fff;
+  transform: scale(0);
+  border: 3px solid #fff;
+  border-radius: 8px;
   content: "";
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
   transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
 }
 .nav__item:hover::before {
-  -webkit-transform: scaleY(1);
-          transform: scaleY(1);
+  transform: scale(0);
+}
+
+.header {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 2em;
+  height: 75vh;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+}
+.header__heading {
+  font-family: "Dancing Script", cursive;
+  font-size: 3rem;
+  font-weight: 300;
 }
 
 @-webkit-keyframes navItemsAnimation {
   from {
-    -webkit-transform: translateX(200%);
-            transform: translateX(200%);
+    transform: translateX(200%);
   }
   to {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 
 @keyframes navItemsAnimation {
   from {
-    -webkit-transform: translateX(200%);
-            transform: translateX(200%);
+    transform: translateX(200%);
   }
   to {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 .nav-items-animation {
@@ -160,17 +161,48 @@ body {
 
 div.logo {
   position: fixed;
-  top: 50px;
+  top: 20px;
   left: 50px;
   z-index: 999;
 }
 
+@media (min-width: 772px) {
+  .header__heading {
+    font-size: 6rem;
+  }
+}
 @media (min-width: 992px) {
   .burger-btn {
-    top: 50px;
-    right: 50px;
+    display: none;
+  }
+  .nav-mobile {
+    display: none;
+  }
+  .nav {
+    background-image: none;
+    transform: translateX(0%);
   }
   .nav__item {
-    font-size: 4.8rem;
+    display: inline-block;
+    font-size: 1.8rem;
+  }
+  .nav__item:hover::before {
+    transform: scale(1);
+  }
+  .nav-desktop {
+    justify-content: flex-end;
+    align-items: flex-start;
+    transform: translateX(0%);
+  }
+  .nav-desktop a {
+    display: inline-block;
+  }
+  .header__heading {
+    font-size: 8rem;
+  }
+}
+@media (min-width: 1200px) {
+  .nav__item {
+    font-size: 2.2rem;
   }
 }/*# sourceMappingURL=main.css.map */
