--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,5 @@
+// font-family: 'Dancing Script', cursive;
+
 @import './colors';
 @import './components';
 @import './mixins';
@@ -79,7 +81,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
+	height: 100%;
 	width: 100%;
 	transform: translateX(100%);
 	background-image: $light-blue-gradient;
@@ -89,10 +91,13 @@ body {
 	&--active {
 		transform: translateX(0);
 	}
-	
+
 	&__item {
 		position: relative;
 		display: block;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		margin: 0.5em 0;
 		padding: 0.5em 2em;
 		font-size: 2.8rem;
@@ -103,17 +108,39 @@ body {
 			position: absolute;
 			top: 0;
 			left: 0;
-			width: 3px;
+			width: 100%;
 			height: 100%;
-			transform: scaleY(0);
-			background-color: $pure-white;
+			transform: scale(0);
+			border: 3px solid $pure-white;
+			border-radius: 8px;
 			content: '';
 			transition: transform 0.3s;
 		}
 
 		&:hover::before {
-			transform: scaleY(1);
+			transform: scale(0);
 		}
+	}
+}
+
+// HEADER
+
+.header {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	padding: 2em;
+	height: 75vh;
+	width: 100%;
+	text-align: center;
+	color: $pure-white;
+
+	&__heading {
+		font-family: 'Dancing Script', cursive;
+		font-size: 3rem;
+		font-weight: 300;
 	}
 }
 
@@ -138,22 +165,61 @@ body {
 }
 div.logo {
 	position: fixed;
-	top: 50px;
+	top: 20px;
 	left: 50px;
 	z-index: 999;
 }
 
 ////// MEDIA /////
 
+@media (min-width: 772px) {
+	.header {
+		&__heading {
+			font-size: 6rem;
+		}
+	}
+}
+
 @media (min-width: 992px) {
 	.burger-btn {
-		top: 50px;
-		right: 50px;
+		display: none;
+	}
+	.nav-mobile {
+		display: none;
+	}
+	.nav {
+		background-image: none;
+		transform: translateX(0%);
+		&__item {
+			display: inline-block;
+			font-size: 1.8rem;
+
+			&:hover::before {
+				transform: scale(1);
+			}
+		}
+	}
+	.nav-desktop {
+		justify-content: flex-end;
+		align-items: flex-start;
+		transform: translateX(0%);
+
+		a {
+			display: inline-block;
+		}
 	}
 
+	.header {
+		&__heading {
+			font-size: 8rem;
+		}
+	}
+}
+
+@media (min-width: 1200px) {
 	.nav {
 		&__item {
-			font-size: 4.8rem;
+			font-size: 2.2rem;
 		}
 	}
 }
