add style, delete logo, add components

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -3,3 +3,38 @@
 	width: 100%;
 	max-width: 1200px;
 }
+
+.section-heading {
+	position: relative;
+	font-family: cursive;
+	margin-bottom: 2em;
+	font-size: 3rem;
+	font-weight: 300;
+	text-transform: uppercase;
+	text-align: center;
+	letter-spacing: 2px;
+}
+
+.section-padding {
+	padding: 2.5em 2em;
+}
+
+@media (min-width: 768px) {
+	.section-heading {
+		font-size: 3.6rem;
+	}
+
+	.section-padding {
+		padding: 3.8em 2em;
+	}
+}
+@media (min-width: 992px) {
+	.section-heading {
+		font-size: 4.8rem;
+	}
+
+	.section-padding {
+		padding: 5em 2em;
+	}
+}
+
