--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,6 +4,37 @@
   max-width: 1200px;
 }
 
+.section-heading {
+  position: relative;
+  font-family: cursive;
+  margin-bottom: 2em;
+  font-size: 3rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 2px;
+}
+
+.section-padding {
+  padding: 2.5em 2em;
+}
+
+@media (min-width: 768px) {
+  .section-heading {
+    font-size: 3.6rem;
+  }
+  .section-padding {
+    padding: 3.8em 2em;
+  }
+}
+@media (min-width: 992px) {
+  .section-heading {
+    font-size: 4.8rem;
+  }
+  .section-padding {
+    padding: 5em 2em;
+  }
+}
 *,
 *::before,
 *::after {
@@ -159,16 +190,27 @@ body {
   background-color: #2e2e2e;
 }
 
-div.logo {
-  position: fixed;
-  top: 20px;
-  left: 50px;
-  z-index: 999;
+.map__box iframe {
+  width: 100%;
+  height: 450px;
+}
+
+.tittle {
+  margin: 1em 0 0.5em 0;
+}
+
+li {
+  list-style: none;
 }
 
 @media (min-width: 772px) {
   .header__heading {
     font-size: 6rem;
+  }
+  .map__box iframe {
+    border: 0;
+    width: 600px;
+    height: 450px;
   }
 }
 @media (min-width: 992px) {
