--- a/src/css/main.css
+++ b/src/css/main.css
@@ -156,6 +156,9 @@ body {
   text-align: center;
   color: #fff;
 }
+.header img {
+  height: 180px;
+}
 .header__heading {
   font-family: "Dancing Script", cursive;
   font-size: 3rem;
@@ -204,9 +207,14 @@ li {
   list-style: none;
 }
 
-@media (min-width: 772px) {
-  .header__heading {
-    font-size: 6rem;
+@media (min-width: 576px) {
+  .header img {
+    height: 300px;
+  }
+}
+@media (min-width: 768px) {
+  .header img {
+    height: 420px;
   }
   .map__box iframe {
     width: 600px;
