change class name for img

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -178,6 +178,7 @@ body {
 	}
 }
 
+
 .tittle {
 	margin: 1em 0 0.5em 0;
 }
@@ -198,7 +199,7 @@ li {
 
 @media (min-width: 768px) {
 	.header {
-		img {
+		&__img {
 			height: 420px;
 		}
 	}
