--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,6 +1,6 @@
-$main-color: #ffd6ff;
+$main-color: #FFD4E0;
 $secondary-color: #e7c6ff;
-$pure-white: #fff;
+$pure-white: #BA6F84;
 $light-white: #eee;
 $dark: #2e2e2e;
 
