--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -6,11 +6,11 @@
 
 .section-heading {
 	position: relative;
-	font-family: cursive;
+	font-family: 'Petit Formal Script', cursive;
 	margin-bottom: 2em;
 	font-size: 3rem;
 	font-weight: 300;
-	text-transform: uppercase;
+	// text-transform: uppercase;
 	text-align: center;
 	letter-spacing: 2px;
 }
