--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -6,3 +6,10 @@
 	background-color: $pure-white;
 	transition: width 0.3s;
 }
+
+@mixin heroImages($bgImg) {
+	background-image: url($bgImg);
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+}
