change H1 content and color

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -152,7 +152,7 @@ body {
   padding: 2em;
   height: 100vh;
   text-align: center;
-  color: #BA6F84;
+  color: black;
   background-image: url("../img/daniel-j-schwarz-YtY724tdl7Y-unsplash-croped.jpg");
   background-size: cover;
   background-position: center;
