--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -135,7 +135,7 @@ body {
 	padding: 2em;
 	height: 100vh;
 	text-align: center;
-	color: $pure-white;
+	color: black;
 	@include heroImages('../img/daniel-j-schwarz-YtY724tdl7Y-unsplash-croped.jpg');
 	background-attachment: scroll;
 
