--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -166,8 +166,22 @@ body {
 	background-color: $dark;
 }
 
+.info {
+	&__box {
+		&--icons {
+			height: 100px;
+			display: block;
+			margin: 20px auto;
+			padding: 20px 0 0 0;
+		}
+	}
+}
+
 .map {
 	&__box {
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		iframe {
 			border: 0;
 			width: 100%;
@@ -177,7 +191,15 @@ body {
 }
 
 .tittle {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	margin: 1em 0 0.5em 0;
+}
+.text {
+	display: flex;
+	justify-content: center;
+	text-align: center;
 }
 
 li {
