change nav bar background color

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -194,6 +194,7 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	text-align: center;
 	margin: 1em 0 0.5em 0;
 }
 .text {
