--- a/src/css/main.css
+++ b/src/css/main.css
@@ -108,7 +108,7 @@ body {
   height: 100%;
   width: 100%;
   transform: translateX(100%);
-  background-image: linear-gradient(45deg, rgba(187, 208, 255, 0.75), rgba(190, 187, 255, 0.75));
+  background-image: linear-gradient(45deg, rgba(255, 212, 224, 0.75), rgba(252, 191, 255, 0.75));
   z-index: 100;
   transition: 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
@@ -215,6 +215,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   margin: 1em 0 0.5em 0;
 }
 
