--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -4,7 +4,8 @@ $pure-white: #BA6F84;
 $light-white: #eee;
 $dark: #2e2e2e;
 
-$light-blue-gradient: linear-gradient(45deg, rgba(187, 208, 255, 0.75), rgba(190, 187, 255, 0.75));
+$light-blue-gradient: linear-gradient(45deg, rgba(255, 212, 224, 0.75), rgba(252, 191, 255, 0.75));
+// $light-blue-gradient: linear-gradient(45deg, rgba(187, 208, 255, 0.75), rgba(190, 187, 255, 0.75));
 // $green-gradient: linear-gradient(45deg, rgba(20, 241, 27, 0.75), rgba(45, 184, 10, 0.75));
 // $green-gradient-solid: linear-gradient(45deg, rgb(20, 241, 42), rgb(80, 184, 10));
 // $light-green-gradient-solid: radial-gradient(circle at top right, rgb(0, 255, 0) 0%, rgb(187, 255, 0) 100%);
