--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -436,11 +436,11 @@ li {
 
 		&__timer {
 			&__body {
-				// font-family: 'Petit Formal Script', cursive;
+				font-family: 'Petit Formal Script', cursive;
 				display: flex;
 				flex-direction: column;
-				width: 450px;
-				height: 200px;
+				width: 550px;
+				height: 250px;
 				overflow: hidden;
 			}
 	
